[package]
name = "ruuvi_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.3"
lazy_static = "^1.4"
prometheus = "0.3"
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "net", "macros", "signal"] }
hyper = { version = "0.14.16", features = ["server", "http1", "tcp"] }
